# talk2browser

./: .env.example  .gitignore  LICENSE  README.md  click_error_#4026a3a3486fbbf5c93e44e0475713f3.html  click_error_#add-to-cart-sauce-labs-backpack.html  click_error_#cb0faf995c8efa5efa334824e595fa1f.html  click_error_#checkout.html  click_error_#continue.html  click_error_#f7faa2.html  click_error_#f82c8a73ac342dff8f53157adb4c5d77.html  click_error_button.submit-button.html  plan.md  pyproject.toml  requirements.txt  stories.md
.windsurf/rules/: common-rules.md
click_error_html/body/div[3]/div[2]/div/form/div/div[1]/div/div/div[1]/div/div/: input.html
data/: login_data.json
docs/: architecture.md  chat-history.md  design.md  hybrid.md  reference.md  remember.md
examples/: basic_usage.py  element.html  generate_script_demo.py  generate_script_example.py  manual_override.js  manual_override_demo.html  simple_navigation.py  simple_script_generation.py  test_agent.py  test_dom_interaction.py  test_dom_service.py
references/: tool_node.py
src/talk2browser/: __init__.py  __main__.py  requirements.txt
src/talk2browser/agent/: __init__.py  action_recorder_singleton.py  agent.py  llm_singleton.py
src/talk2browser/browser/: __init__.py  client.py  element_utils.py  manual_override_injector.py  page.py  page_manager.py
src/talk2browser/browser/dom/: buildDomTree.js  service.py  test_dom_highlight.html
src/talk2browser/scripts/: generate_playwright_script.py  generated_playwright_script.py
src/talk2browser/services/: action_service.py  manual_mode_service.py  script_generation_service.py  sensitive_data_service.py  vision_service.py
src/talk2browser/tools/: __init__.py  action_recorder.py  browser_tools.py  custom_tools.py  file_system_tools.py  handle_tool_exception.py  registry.py  script_tools.py
src/talk2browser/utils/: __init__.py  config.py  logging.py  secret_resolver.py  tool_filter.py
tests/: __init__.py  conftest.py  test_agent.py  test_browser.py  test_element_map.py  test_script_generation.py  test_tools.py
