[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2browser"
version = "0.1.0"
description = "A self-improving browser automation tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thushara", email = "your.email@example.com"},
]
dependencies = [
    "playwright>=1.42.0",
    "langgraph>=0.0.1",
    "langchain-anthropic>=0.0.1",
    "langchain-core>=0.0.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.2.2",
    # Add ultralytics if used
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
talk2browser = "talk2browser.__main__:main"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/youruser/talk2browser" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
